syntax = "proto3";

package telepresence.authenticator;

option go_package = "github.com/telepresenceio/telepresence/rpc/v2/authenticator";

service Authenticator {
  rpc GetContextExecCredentials(GetContextExecCredentialsRequest) returns (GetContextExecCredentialsResponse);
}

message GetContextExecCredentialsRequest {
  string contextName = 1;
}

message GetContextExecCredentialsResponse {
  bytes rawCredentials = 1;
}

